--- a/src/app/main/contacts/contact-view/contact-view.html
+++ b/src/app/main/contacts/contact-view/contact-view.html
@@ -10,7 +10,7 @@
 @if (contactService.contactForView; as contact) {
 <div class="contact-card">
 	<div class="contact-header">
-		<div class="initials" [style.background-color]="getAvatarColor(contact)">
+		<div class="initials" [style.background-color]="contactService.getAvatarColor(contact)">
 			{{ contact.initials }}
 		</div>
 		<h2 class="contact-name">{{ contact.name }}</h2>
