--- a/src/app/main/contacts/contact-view/contact-view.scss
+++ b/src/app/main/contacts/contact-view/contact-view.scss
@@ -1,5 +1,21 @@
 @use "../../../../styles/mixins";
 
+.enter-animation {
+	animation: slide-fade 1s;
+}
+
+@keyframes slide-fade {
+	from {
+		opacity: 0;
+		transform: translateX(220px);
+	}
+
+	to {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+
 :host {
 	grid-column: 1;
 	grid-row: 1;
