--- a/src/app/shared/components/profile-picture/profile-picture.html
+++ b/src/app/shared/components/profile-picture/profile-picture.html
@@ -1,1 +1,3 @@
-<p>profile-picture works!</p>
+<div [appAvatarColorFromContact]="contact()" class="profile-picture">
+	<span [class]="size()">{{ contact().initials }}</span>
+</div>
