--- a/src/app/shared/components/search-field/search-field.scss
+++ b/src/app/shared/components/search-field/search-field.scss
@@ -1,6 +1,7 @@
 :host {
 	align-self: center;
 	width: 100%;
+	height: 100%;
 }
 
 .search {
@@ -11,7 +12,7 @@
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	height: 48px;
+	height: 100%;
 	padding: 0.5rem 1rem;
 	padding-right: 0;
 	outline: 1px solid var(--input-gray);
@@ -77,6 +78,11 @@ button:hover {
 
 button:active {
 	scale: 0.9;
+}
+
+img {
+	height: 100%;
+	aspect-ratio: 1;
 }
 
 .alert-text {
