--- a/src/app/shared/components/profile-picture/profile-picture.html
+++ b/src/app/shared/components/profile-picture/profile-picture.html
@@ -1,3 +1,3 @@
-<div [appAvatarColorFromContact]="contact()" class="profile-picture">
-	<span [class]="size()">{{ contact().initials }}</span>
+<div [appAvatarColorFromContact]="contact()" class="profile-picture" [class]="size()">
+	<span>{{ contact().initials }}</span>
 </div>
