--- a/src/app/shared/components/profile-picture/profile-picture.scss
+++ b/src/app/shared/components/profile-picture/profile-picture.scss
@@ -8,20 +8,21 @@
 	border: 2px solid white;
 	border-radius: 50%;
 
+	&.big {
+		font-size: 47px;
+	}
+
+	&.medium {
+		font-size: var(--fs-h3);
+	}
+
+	&.small {
+		font-size: 12px;
+		border-width: 1px;
+	}
+
 	> span {
 		color: white;
 		font-size: inherit;
-
-		&.big {
-			font-size: 47px;
-		}
-
-		&.medium {
-			font-size: var(--fs-h3);
-		}
-
-		&.small {
-			font-size: 12px;
-		}
 	}
 }
