--- a/src/app/main/board/task-view/task-view.scss
+++ b/src/app/main/board/task-view/task-view.scss
@@ -7,9 +7,8 @@
 	background: #fff;
 	box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.3);
 	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+  inset: 0;
+  margin: auto;
 	z-index: 1000;
 	display: flex;
 	flex-direction: column;
