--- a/src/app/main/board/board.scss
+++ b/src/app/main/board/board.scss
@@ -15,3 +15,33 @@
 	pointer-events: all;
 	z-index: 1000;
 }
+
+.overlay {
+	position: fixed;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	inset: 0;
+}
+
+.container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	row-gap: 2rem;
+	padding: 1rem;
+	background-color: var(--bg-color-white);
+
+	& button {
+		align-self: end;
+		display: flex;
+		justify-content: center;
+		align-items: cener;
+		height: 40px;
+		aspect-ratio: 1;
+		border: none;
+		background: none;
+		cursor: pointer;
+	}
+}
