--- a/src/app/main/board/board.scss
+++ b/src/app/main/board/board.scss
@@ -22,6 +22,7 @@
 	justify-content: center;
 	align-items: center;
 	inset: 0;
+	backdrop-filter: blur(2px);
 }
 
 .container {
@@ -32,6 +33,8 @@
 	row-gap: 2rem;
 	padding: 1rem;
 	background-color: var(--bg-color-white);
+	box-shadow: 0 0 8px #00000049;
+	border-radius: 20px;
 
 	& button {
 		align-self: end;
