--- a/src/app/main/board/board-view/board-view.html
+++ b/src/app/main/board/board-view/board-view.html
@@ -2,14 +2,10 @@
 	<header class="board-header">
 		<div class="mobile-btn-cnt">
 			<h1 class="board-title">Board</h1>
-			<app-svg-button class="board-add-button"
-       (onClick)="openAddTaskOverlay()">
-      </app-svg-button>
+			<app-svg-button class="board-add-button" (onClick)="openAddTaskOverlay()"> </app-svg-button>
 		</div>
 		<div class="header-controls">
-			<app-search-field
-      (searchText)="onSearch($event)">
-    </app-search-field>
+			<app-search-field (searchText)="onSearch($event)"> </app-search-field>
 			<button class="desktop-btn" type="button" (click)="openAddTaskOverlay()">
 				Add task
 				<img src="images/board_section/add_icon.svg" />
@@ -29,12 +25,13 @@
 		>
 			<div class="mobile-btn-cnt">
 				<h2 class="column-title">To Do</h2>
-				<app-svg-button class="task-add-button"
-        (onClick)="openAddTaskOverlay()">
-           </app-svg-button>
+				<app-svg-button class="task-add-button" (onClick)="openAddTaskOverlay()"> </app-svg-button>
 				<div class="btn-overlay"></div>
 			</div>
 			<div class="column-body">
+				@if (todoTasks().length === 0) {
+					<div class="no-tasks">No tasks To do</div>
+				}
 				@for (task of todoTasks(); track task.id) {
 					<app-board-card
 						prev="todo"
@@ -60,12 +57,13 @@
 		>
 			<div class="mobile-btn-cnt">
 				<h2 class="column-title">In Progress</h2>
-				<app-svg-button class="task-add-button"
-        (onClick)="openAddTaskOverlay()">
-        </app-svg-button>
+				<app-svg-button class="task-add-button" (onClick)="openAddTaskOverlay()"> </app-svg-button>
 				<div class="btn-overlay"></div>
 			</div>
 			<div class="column-body">
+				@if (inProgressTasks().length === 0) {
+					<div class="no-tasks">No tasks To do</div>
+				}
 				@for (task of inProgressTasks(); track task.id) {
 					<app-board-card
 						prev="todo"
@@ -91,12 +89,13 @@
 		>
 			<div class="mobile-btn-cnt">
 				<h2 class="column-title">Awaiting Feedback</h2>
-				<app-svg-button class="task-add-button"
-         (onClick)="openAddTaskOverlay()">
-         </app-svg-button>
+				<app-svg-button class="task-add-button" (onClick)="openAddTaskOverlay()"> </app-svg-button>
 				<div class="btn-overlay"></div>
 			</div>
 			<div class="column-body">
+				@if (feedbackTasks().length === 0) {
+					<div class="no-tasks">No tasks To do</div>
+				}
 				@for (task of feedbackTasks(); track task.id) {
 					<app-board-card
 						prev="in-progress"
@@ -123,6 +122,9 @@
 			<h2 class="column-title">Done</h2>
 
 			<div class="column-body">
+				@if (doneTasks().length === 0) {
+					<div class="no-tasks">No tasks To do</div>
+				}
 				@for (task of doneTasks(); track task.id) {
 					<app-board-card
 						prev="awaiting-feedback"
@@ -141,9 +143,7 @@
 	<!-- Zeigt die TaskView nur an, wenn selectedTaskId einen Wert hat -->
 	@if (selectedTaskId()) {
 		<div class="overlay-wrapper">
-			<div class="overlay-backdrop"
-      (click)="closeTaskDetail()">
-    </div>
+			<div class="overlay-backdrop" (click)="closeTaskDetail()"></div>
 
 			<app-task-view
 				[taskId]="selectedTaskId()!"
