--- a/src/app/main/board/board-view/board-view.scss
+++ b/src/app/main/board/board-view/board-view.scss
@@ -138,6 +138,20 @@
 	z-index: 1000;
 }
 
+  .no-tasks {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--input-gray);
+  background: #8b8b8b27;
+  margin-top: 0.1em;
+  border-radius: 8px;
+  border-style: dashed;
+  font-size: clamp(0.875em, 3vw, 1.125em);
+}
+
 @media (min-width: 1250px) {
 	.board-container {
 		padding-top: 2rem;
@@ -238,6 +252,21 @@
       }
 		}
 	}
+
+  .no-tasks {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--input-gray);
+  background: #8b8b8b27;
+  margin-top: 0.4em;
+  border-radius: 8px;
+  border-style: dashed;
+  font-size: clamp(0.875em, 3vw, 1.125em);
+}
+
 
 	.cdk-drag-preview {
 		transition: rotate 220ms cubic-bezier(0, 0, 0.2, 0.5);
