--- a/src/app/main/board/board-view/board-view.scss
+++ b/src/app/main/board/board-view/board-view.scss
@@ -157,6 +157,7 @@
 		padding-top: 2rem;
 		background: var(--bg-color-gray);
 		overflow-x: hidden;
+    margin-bottom: 20px;
 	}
 
 	.board-header {
@@ -227,6 +228,7 @@
 			height: calc(100% - 40px);
 			overflow-y: auto;
 			padding: 0.5rem;
+      margin-top: 20px;
 		}
 
 		.column-title {
