--- a/src/app/main/auth/login/login.scss
+++ b/src/app/main/auth/login/login.scss
@@ -1,21 +1,63 @@
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-.login-signup-header {
-	.join-logo {
-		height: calc(28.438rem - clamp(7.563rem, 43.0617rem + -39.443vw, 20.875rem));
-		width: calc(23.375rem - clamp(6.25rem, 35.25rem + -32.2222vw, 17.125rem));
-		position: relative;
-		top: 40px;
-		left: 20px;
-		transform: scale(0.365) translateX(-100%) translateY(-100%);
-		background-image: url(../../../../../public/images/join_logo/join_logo_dark.svg);
-		background-repeat: no-repeat;
-		background-size: contain;
-		animation: moveToTopLeft 1s ease-in-out;
-	}
+.login-overlay {
+  position: fixed;
+  inset: 0;
+  background-color: white;
+  z-index: 1000;
+  animation: fadeOutOverlay 0.5s ease-in-out forwards;
+  animation-delay: 1.25s;
+  background-color: #2a3547;
+}
+
+.join-logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: scale(1) translate(-50%, -50%);
+  transform-origin: top left;
+  height: clamp(1rem, 40vw, 20rem);
+  width: clamp(1rem, 40vw, 20rem);
+  background-image: url('../../../../../public/images/join_logo/join_logo.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  animation: moveToCorner 1s ease-in-out forwards;
+}
+
+@keyframes moveToCorner {
+  0% {
+    top: 50%;
+    left: 50%;
+    transform: scale(1) translate(-50%, -50%);
+  }
+
+  100% {
+    top: calc(env(safe-area-inset-top, 0px) + 18px);
+    left: calc(env(safe-area-inset-left, 0px) + 18px);
+    transform: scale(0.18) translate(0, 0);
+  }
+}
+
+@keyframes fadeOutOverlay {
+  0% {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+.logo img {
+  margin-top: 22px;
+  margin-left: 16px;
+  height: 27px;
+  width: 27px;
 }
