--- a/src/app/main/summary/dashboard/dashboard.html
+++ b/src/app/main/summary/dashboard/dashboard.html
@@ -7,9 +7,11 @@
     </div>
 
     <div class="row top-row">
-        <button class="stat-card small todo" (click)="openBoard()">
+        <button class="stat-card small todo" (click)="openBoard()" (mouseenter)="isTodoHovered = true"
+            (mouseleave)="isTodoHovered = false">
             <div class="stat-icon">
-                <img src="./images/summary_section/todo-dark-mobile.svg">
+                <img
+                    [src]="isTodoHovered ? './images/summary_section/todo-hover.svg' : './images/summary_section/todo-dark-mobile.svg'" />
             </div>
             <div class="stat-left">
                 <div class="stat-count">{{ (counts$ | async)?.todo ?? 0 }}</div>
@@ -17,8 +19,12 @@
             </div>
         </button>
 
-        <button class="stat-card small done" (click)="openBoard()">
-            <div class="stat-icon"><img src="./images/summary_section/check-dark-mobile.svg"></div>
+        <button class="stat-card small done" (click)="openBoard()" (mouseenter)="isDoneHovered = true"
+            (mouseleave)="isDoneHovered = false">
+            <div class="stat-icon">
+                <img
+                    [src]="isDoneHovered ? './images/summary_section/check-hover.svg' : './images/summary_section/check-dark-mobile.svg'" />
+            </div>
             <div class="stat-left">
                 <div class="stat-count">{{ (counts$ | async)?.done ?? 0 }}</div>
                 <div class="stat-label">Done</div>
